--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "lucide-react": "^0.462.0",
     "next": "16.0.3",
     "ogl": "^1.0.11",
     "react": "19.2.0",
