--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "lucide-react": "^0.462.0",
+    "motion": "^11.11.11",
     "next": "16.0.3",
     "ogl": "^1.0.11",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-markdown": "^9.1.0",
     "react-spinners": "^0.17.0",
-    "recharts": "^3.4.1"
+    "recharts": "^3.4.1",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
