--- a/chromium-extension/manifest.json
+++ b/chromium-extension/manifest.json
@@ -3,6 +3,11 @@
   "name": "Smash Watch Link",
   "description": "Adds a “View on smash.watch” button on start.gg tournament event and bracket pages.",
   "version": "0.1.0",
+  "icons": {
+    "16": "icons/icon-16.png",
+    "48": "icons/icon-48.png",
+    "128": "icons/icon-128.png"
+  },
   "content_scripts": [
     {
       "matches": [
